+ features
* bugfixes
==================== 1.0.1-dev =====================
Gameplay:
 + Minigun push is now much stronger
 + Easier to push hogs around with blowtorch
 + Backjumps are now a bit easier
 + Teach computer players how to ...
 +   - use drill strike, piano strike, air mine, cleaver, seduction, resurrector, laser sight
 +   - use mine strike (0 seconds only)
 +   - use RC plane (very basic)
 +   - drop mines from a cliff
 + Low level computer players are more inaccurate with guns
 + Computer player now takes Strong Wind game modifier into account
 + Various small computer player improvements
 + New taunt chat commands: /bubble, /happy
 * Fix many projectiles not being affected by Heavy Wind after turn end
 * Fix hog getting stuck when opening parachute right after a shoryuken digging through land
 * Fix game hanging if computer hog has nothing to attack

Campaigns:
 + A Space Adventure: Spacetrip: Meteorite appears blown-up after victory
 * A Classic Fairytale: Mission 1: Fix possibility of getting stuck in “Leap of Faith” section
 * A Space Adventure: The First Stop: Fix broken victory condition when eliminating minions
 * A Space Adventure: Killing the Specialists: Don't award player health if enemy hurts itself

Styles:
 + Racer: Allow to set turn time in game scheme
 + Racer: Reset mines, air mines and sticky mines every turn
 * Racer: Resize waypoints in custom-sized drawn maps
 * Mutant: Fix impossible to become mutant after mutant is gone

Content:
 + New flags: serbia, montenegro
 + New hat: zoo_panda

Graphics / user interface:
 + Add dynamite fuse and impact sounds
 + Themes: Add fade-in and fade-out effects for background flakes
 + Themes: Make Sudden Death jellyfish in Underwater theme rise
 + In-Game chat size can now be adjusted. Hold Ctrl and press -, + or = while in chat input. Hold Shift for finer control
 + The intial in-game chat size can be configured in the Frontend's “Video” settings tab
 + Various small HUD tweaks

Frontend: