@@ -6,7 +6,8 @@ Gameplay:
  + Easier to push hogs around with blowtorch
  + Backjumps are now a bit easier
  + Teach computer players how to ...
- +   - use drill strike, piano strike, air mine, cleaver, seduction, resurrector, laser sight
+ +   - use drill strike, piano strike, air mine, cleaver, seduction
+ +   - use resurrector, laser sight, low gravity
  +   - use mine strike (0 seconds only)
  +   - use RC plane (very basic)
  +   - drop mines from a cliff
